    * Added getTroveLatestByLabel as a client-side call
    * Label lookups pick the latest version which matches instead of the
      latest version on each branch
    * Replaced branch affinity with label affinity
    * getAllTroveLeavesByLabel() filters results by server names to eliminate
      spurious results from repositories which host multiple server names
      (CNY-1771)

  o Bug Fixes:
    * Fix a bug in commit code that made r.macros.buildlabel unusable because
      you could not commit recipes that used it.  (CNY-1752)

  o Other changes:
    * showchangeset script displays information on redirec troves

Changes in 1.1.33:
  o Build Changes:
    * The addArchive() source action now handles xpi archives. (CNY-1793)
    * Unknown flags are now ignored when calling loadRecipe with a
      flavor, instead of printing a traceback.

  o Update Changes:
    * Updates to groups are now allowed to be merged with other groups
      in update jobs, reducing the number of jobs that are used for
      updates.

  o Client Changes:
    * Cloning now always increments group version counts, mimicing
      the behavior of group cooking. (CNY-1724)
    * When promoting, --all-flavors is now on by default.  However, if
      a flavor to promote or clone is specified, promotes will be
      limited by that flavor. (CNY-1535)
    * Several commands, such as promote, update and rq, now take an
      --exact-flavors flag.  If specified, the flavors for each trove
      must match exactly - no system flavor or heuristic is used to
      find the trove you want. (CNY-1829)
    * If there is a problem with domain name resolution, conary will
      retry 5 times. However, if the connection fails after those
      attempts, future connection requests will now fail after one try.
      (CNY-1814)

  o Bug Fixes:
    * The SQLite "ANALYZE" command is no longer run on local SQLite
      databases. Any data stored by the "ANALYZE" command will be