@@ -85,6 +85,10 @@ class CheckinCallback(callbacks.UpdateCallback, callbacks.CookCallback):
 # makePathId() returns 16 random bytes, for use as a pathId
 makePathId = lambda: os.urandom(16)
 
+class UpdateSpec(object):
+
+    __slots__ = [ "targetDir", "versionSpec", "state", "shadowHeadVersion",
+                  "parentRootVersion", "parentHeadVersion", "targetBranch" ]
 
 def _verifyAtHead(repos, headPkg, state):
     # get the latest version on our branch
@@ -1105,80 +1109,140 @@ def _showChangeSet(repos, changeSet, oldTrove, newTrove,
 	path = oldTrove.getFile(pathId)[0]
 	print "%s: removed" % path
 	
-def updateSrc(repos, versionStr = None, callback = None):
+def updateSrc(repos, versionList = None, callback = None):
+    if not versionList:
+        updateSpecs = [ (os.getcwd(), None) ]
+    else:
+        updateSpecs = []
+
+        for versionStr in versionList:
+            if os.path.isdir(versionStr):
+                targetDir = versionStr
+                versionStr = None
+            elif '=' in versionStr:
+                targetDir, versionStr = versionStr.split('=', 1)
+                if not versionStr:
+                    versionStr = None
+            else:
+                targetDir = os.getcwd()
+
+            updateSpecs.append( (targetDir, versionStr) )
+        del targetDir, versionStr
+
     if not callback:
         callback = CheckinCallback()
-    conaryState = ConaryStateFromFile("CONARY", repos)
-    state = conaryState.getSourceState()
-    pkgName = state.getName()
-    baseVersion = state.getVersion()
-    if baseVersion == versions.NewVersion():
-        log.error("cannot update source directory for package '%s' - it was created with newpkg and has never been checked in." % pkgName)
-        return
 
-    if not versionStr:
-        r = repos.getTroveLatestByLabel({ pkgName :
-                                            { state.getBranch().label() :
+    for i, (targetDir, versionStr) in enumerate(updateSpecs):
+        conaryState = ConaryStateFromFile(targetDir + "/CONARY", repos)
+        state = conaryState.getSourceState()
+        if state.getVersion() == versions.NewVersion():
+            log.error("cannot update source directory for package '%s' - it was created with newpkg and has never been checked in." % state.getName())
+            return
+
+        updateSpecs[i] = (targetDir, versionStr, state)
+
+    latestVersions = [ x for x in enumerate(updateSpecs) if x[1][1] is None ]
+    specificVersions = [ x for x in enumerate(updateSpecs) if x[1][1]
+                                                                is not None ]
+
+    if latestVersions:
+        q = {}
+        for state in [ x[1][2] for x in latestVersions ]:
+            q.update({ state.getName() : { state.getBranch().label() :
                                                     [ deps.deps.Flavor() ] } } )
-        headVersion = r[pkgName].keys()[0]
-	head = repos.getTrove(pkgName, headVersion, deps.deps.Flavor())
-	newBranch = None
-	headVersion = head.getVersion()
-	if headVersion == baseVersion:
-	    log.info("working directory is already based on head of branch")
-	    return
 
-        if headVersion.branch() != state.getBranch():
-            log.info("switching to branch %s" % headVersion.branch())
-            newBranch = fullLabel(None, headVersion, str(headVersion))
-            newBranch = headVersion.branch()
-    else:
-	versionStr = state.expandVersionStr(versionStr)
+        r = repos.getTroveLatestByLabel(q)
+
+        for i, state in [ (x[0], x[1][2]) for x in latestVersions ]:
+            headVersion = r[state.getName()].keys()[0]
+            newBranch = None
+            if headVersion == state.getVersion():
+                log.info("working directory %s is already based on head of "
+                         "branch", targetDir)
+                return
+
+            if headVersion.branch() != state.getBranch():
+                log.info("switching directory %s to branch %s", targetDir,
+                         headVersion.branch())
+                newBranch = fullLabel(None, headVersion, str(headVersion))
+                newBranch = headVersion.branch()
+
+            updateSpecs[i] = (updateSpecs[i][0], state, headVersion, newBranch)
+
+    if specificVersions:
+        q = [ (state.getName(), state.expandVersionStr(versionStr), None)
+                for i, (targetDir, versionStr, state) in specificVersions ]
 
         try:
-            pkgList = repos.findTrove(None, (pkgName, versionStr, None))
-        except errors.TroveNotFound:
-	    log.error("Unable to find source component %s with version %s"
-                      % (pkgName, versionStr))
-	    return
-            
-	if len(pkgList) > 1:
-	    log.error("%s specifies multiple versions" % versionStr)
-	    return
+            matches = repos.findTroves(None, q)
+        except errors.TroveNotFound, e:
+            log.error('cannot find source trove: %s' % str(e))
+            return
 
-	headVersion = pkgList[0][1]
-	newBranch = fullLabel(None, headVersion, versionStr)
+        for i, (targetDir, versionStr, state) in specificVersions:
+            l = matches[(state.getName(), state.expandVersionStr(versionStr),
+                         None)]
+            if len(l) > 1:
+                log.error("%s specifies multiple versions" % versionStr)
+                return
+            elif not len(l):
+                log.error("Unable to find source component %s with version %s"
+                          % (state.getName(), versionStr))
+                return
 
-    changeSet = repos.createChangeSet([(pkgName,
-                                (baseVersion, deps.deps.Flavor()),
-                                (headVersion, deps.deps.Flavor()),
-                                0)],
-                                      excludeAutoSource = True,
-                                      callback = callback)
+            headVersion = l[0][1]
+            newBranch = fullLabel(None, headVersion, versionStr)
+            updateSpecs[i] = (updateSpecs[i][0], state, headVersion, newBranch)
 
-    troveChanges = changeSet.iterNewTroveList()
-    troveCs = troveChanges.next()
-    assert(util.assertIteratorAtEnd(troveChanges))
+    job = [ (state.getName(), (state.getVersion(), deps.deps.Flavor()),
+                              (headVersion,        deps.deps.Flavor()), False)
+            for (targetDir, state, headVersion, newBranch) in updateSpecs ]
 
-    localVer = state.getVersion().createShadow(versions.LocalLabel())
-    fsJob = update.FilesystemJob(repos, changeSet, 
-				 { (state.getName(), localVer) : state }, "",
-                                 flags = update.UpdateFlags(ignoreUGids = True,
-                                                            merge = True) )
-    errList = fsJob.getErrorList()
-    if errList:
-	for err in errList: log.error(err)
-        return False
-    fsJob.apply()
-    newPkgs = fsJob.iterNewTroveList()
-    newState = newPkgs.next()
-    assert(util.assertIteratorAtEnd(newPkgs))
+    fullChangeSet = repos.createChangeSet(job,
+                                          excludeAutoSource = True,
+                                          callback = callback)
 
-    if newState.getVersion() == troveCs.getNewVersion() and newBranch:
-	newState.changeBranch(newBranch)
+    success = True
+    for targetDir, state, headVersion, newBranch in updateSpecs:
+        # this changeSet manipulation creates a changeset with only the
+        # single trove in it becaues the update code deals with entire
+        # changesets and can't send bits to different root directories
+        fullChangeSet.reset()
+        changeSet = changeset.ReadOnlyChangeSet()
+        changeSet.merge(fullChangeSet)
 
-    conaryState.setSourceState(newState)
-    conaryState.write("CONARY")
+        troveCs = changeSet.getNewTroveVersion(state.getName(),
+                                               headVersion, deps.deps.Flavor())
+
+        l = [ x for x in changeSet.iterNewTroveList() ]
+        [ changeSet.delNewTrove(x.getName(), x.getNewVersion(),
+                                x.getNewFlavor()) for x in l ]
+        changeSet.newTrove(troveCs)
+
+        localVer = state.getVersion().createShadow(versions.LocalLabel())
+        fsJob = update.FilesystemJob(repos, changeSet,
+                                     { (state.getName(), localVer) : state },
+                                     root = targetDir,
+                                     flags = update.UpdateFlags(ignoreUGids = True,
+                                                                merge = True))
+        errList = fsJob.getErrorList()
+        if errList:
+            for err in errList: log.error(err)
+            success = False
+            continue
+
+        fsJob.apply()
+        newPkgs = fsJob.iterNewTroveList()
+        newState = newPkgs.next()
+        assert(util.assertIteratorAtEnd(newPkgs))
+
+        if newState.getVersion() == troveCs.getNewVersion() and newBranch:
+            newState.changeBranch(newBranch)
+
+        conaryState.setSourceState(newState)
+        conaryState.write(targetDir + "/CONARY")
+
+    return success
 
 def _determineRootVersion(repos, state):
     ver = state.getVersion()
